[COMMON]: fix build issue if SMP disabled
Change-Id: Ib6cc3ef7d3f0d6eb2005244a4f68dc47653c9706
Signed-off-by: Pankaj Dubey <pankaj.dubey@samsung.com>
Reviewed-on: http://107.108.3.115:8081/5336
Reviewed-by: Naushad K <naushad@samsung.com>
Reviewed-by: ritesh solanki <r.solanki@samsung.com>

--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -235,7 +235,7 @@ config EXYNOS5_DYNAMIC_CPU_HOTPLUG
 
 config EXYNOS3_DYNAMIC_CPU_HOTPLUG
 	bool "Exynos3 Dynamic CPU Hotplug support"
-	depends on CPU_FREQ
+	depends on CPU_FREQ && HOTPLUG_CPU
 	help
 		Enable Dynamic CPU Hotplug
 
