[3250]: Mali: Provide support to lock maximum G3D freq with config option.
Change-Id: I5239ec15830fd15a3fd68ad0e91596cfef78ebaa
Signed-off-by: Tony K Nadackal <tony.kn@samsung.com>
Reviewed-on: http://107.108.3.115:8081/5370
Reviewed-by: Tony
Reviewed-by: Pankaj Kumar Dubey <pankaj.dubey@samsung.com>
Reviewed-by: ritesh solanki <r.solanki@samsung.com>
Tested-by: ritesh solanki <r.solanki@samsung.com>

--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -355,6 +355,25 @@ config EXYNOS3250_MAX_MIFFREQ
 	  It limits max_freq of MIF to the provided value.
 	  Provide valid MIF freq value[400/200/133/100/50 MHz].
 
+choice
+	prompt "Lock maximum G3D frequency"
+	default EXYNOS_MAX_G3DFREQ_266
+	depends on SOC_EXYNOS3250
+	depends on MALI_VER_R4P0_REL0
+	help
+	 It limits maximum frequency of MALI G3D to the provided value.
+
+config EXYNOS_MAX_G3DFREQ_266
+	bool "266MHz"
+
+config EXYNOS_MAX_G3DFREQ_160
+	bool "160MHz"
+
+config EXYNOS_MAX_G3DFREQ_80
+	bool "80MHz"
+
+endchoice
+
 if EXYNOS_ATAGS
 
 config EXYNOS_DEV_DMA
