--- a/arch/arm/configs/koi_defconfig
+++ b/arch/arm/configs/koi_defconfig
@@ -312,7 +312,9 @@ CONFIG_LOCKUP_DETECTOR=y
 CONFIG_BOOTPARAM_HARDLOCKUP_PANIC=y
 CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
 CONFIG_PANIC_TIMEOUT=-1
+# CONFIG_SCHED_DEBUG is not set
 # CONFIG_DEBUG_PREEMPT is not set
+# CONFIG_DEBUG_BUGVERBOSE is not set
 CONFIG_DEBUG_LIST=y
 CONFIG_STACK_TRACER=y
 # CONFIG_ARM_UNWIND is not set
