--- a/arch/arm/boot/dts/exynos3250.dtsi
+++ b/arch/arm/boot/dts/exynos3250.dtsi
@@ -408,14 +408,13 @@
 
 	serial_0: serial@13800000 {
 		compatible = "samsung,exynos-uart";
-		samsung,separate-uart-clk;
 		reg = <0x13800000 0x100>;
 		dmas = <&pdma0 16 &pdma0 15>;
 		dma-names = "tx", "rx";
 		samsung,fifo-size = <256>;
 		interrupts = <0 109 0>;
-		clocks = <&cmu CLK_UART0>, <&cmu CLK_SCLK_UART0>, <&cmu CLK_SCLK_UART0>;
-		clock-names = "gate_pclk0", "gate_uart0", "sclk_uart0";
+		clocks = <&cmu CLK_UART0>, <&cmu CLK_SCLK_UART0>;
+		clock-names = "gate_uart0", "sclk_uart0";
 		pinctrl-names = "default";
 		pinctrl-0 = <&uart0_data &uart0_fctl>;
 		status = "disabled";
@@ -423,14 +422,13 @@
 
 	serial_1: serial@13810000 {
 		compatible = "samsung,exynos-uart";
-		samsung,separate-uart-clk;
 		reg = <0x13810000 0x100>;
 		dmas = <&pdma1 16 &pdma1 15>;
 		dma-names = "tx", "rx";
 		samsung,fifo-size = <64>;
 		interrupts = <0 110 0>;
-		clocks = <&cmu CLK_UART1>, <&cmu CLK_SCLK_UART1>, <&cmu CLK_SCLK_UART1>;
-		clock-names = "gate_pclk1", "gate_uart1", "sclk_uart1";
+		clocks = <&cmu CLK_UART1>, <&cmu CLK_SCLK_UART1>;
+		clock-names = "gate_uart1", "sclk_uart1";
 		pinctrl-names = "default";
 		pinctrl-0 = <&uart1_data &uart1_fctl>;
 		status = "disabled";
@@ -438,14 +436,13 @@
 
 	serial_2: serial@13820000 {
 		compatible = "samsung,exynos-uart";
-		samsung,separate-uart-clk;
 		reg = <0x13820000 0x100>;
 		dmas = <&pdma0 18 &pdma0 17>;
 		dma-names = "tx", "rx";
 		samsung,fifo-size = <256>;
 		interrupts = <0 111 0>;
-		clocks = <&cmu CLK_UART2>, <&cmu CLK_SCLK_UART2>, <&cmu CLK_SCLK_UART2>;
-		clock-names = "gate_pclk2", "gate_uart2", "sclk_uart2";
+		clocks = <&cmu CLK_UART2>, <&cmu CLK_SCLK_UART2>;
+		clock-names = "gate_uart2", "sclk_uart2";
 		pinctrl-names = "default";
 		pinctrl-0 = <&uart2_data>;
 		status = "disabled";
@@ -453,14 +450,13 @@
 
 	serial_3: serial@13830000 {
 		compatible = "samsung,exynos-uart";
-		samsung,separate-uart-clk;
 		reg = <0x13830000 0x100>;
 		dmas = <&pdma1 18 &pdma1 17>;
 		dma-names = "tx", "rx";
 		samsung,fifo-size = <16>;
 		interrupts = <0 112 0>;
-		clocks = <&cmu CLK_UART3>, <&cmu CLK_SCLK_UART3>, <&cmu CLK_SCLK_UART3>;
-		clock-names = "gate_pclk3", "gate_uart3", "sclk_uart3";
+		clocks = <&cmu CLK_UART3>, <&cmu CLK_SCLK_UART3>;
+		clock-names = "gate_uart3", "sclk_uart3";
 		pinctrl-names = "default";
 		pinctrl-0 = <&uart3_data>;
 		status = "disabled";
